# holdslot

./: .gitignore  .prettierignore  CLAUDE.md  README.md  amplify.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py  models.py
apps/api/app/core/: __init__.py  cache.py  config.py  db.py  deps.py  email.py  pagination.py  security.py
apps/api/app/domains/: __init__.py
apps/api/app/domains/approvals/: __init__.py  router.py  schemas.py
apps/api/app/domains/auth/: router.py  schemas.py  service.py
apps/api/app/domains/batches/: __init__.py  router.py  schemas.py  service.py
apps/api/app/domains/briefs/: completeness.py  research_spec.py  router.py  schemas.py  structuring.py
apps/api/app/domains/clients/: router.py  schemas.py
apps/api/app/domains/icps/: __init__.py  router.py  schemas.py
apps/api/app/domains/prospects/: apollo_map.py  clay.py  find.py  fit.py  identity.py  lookalike.py  router.py  schemas.py  scoring.py  sourcing.py  suppression.py
apps/api/app/integrations/apollo/: client.py
apps/api/app/integrations/openrouter/: client.py
apps/api/scripts/: README.md  build-and-deploy.sh  c_smoke_live.py  dev-env.sh  verify_keys.py
apps/api/tests/: test_acceptance.py  test_apollo.py  test_batches.py  test_briefs_icps.py  test_cache.py  test_companies_flow.py  test_completeness.py  test_find.py  test_health.py  test_lookalike.py  test_migrations.py  test_openrouter.py  test_pagination.py  test_prospects.py  test_prospects_apollo.py  test_research_spec.py  test_scoring.py  test_security.py  test_targeting_trim.py
apps/api/tests/fixtures/apollo/: _smoke_test.sh  _smoke_test2.sh  companies_search.json  organizations_enrich_apple.json  people_match.json  people_search.json
apps/web/: .env.example  eslint.config.mjs  knip.json  package.json  (+1 more)
design/: CLAUDE.md  README.md  booking.html  client-approval.html  client-switch.js  external-status.html  feedback.html  holdslot.css  home.html  login.html  overview.html  workspace.html
docs/: backend-development-plan.md  data-schema.md  initial-build-plan.md  modularization-plan.md
infra/: README.md
(+115 files in other folders)
